collapsable: added target for correct div
Uses register-flex-columns to set the inherit width and min-width instead to get the right behaviour.

--- a/src/extension/features/general/collapse-side-menu/index.css
+++ b/src/extension/features/general/collapse-side-menu/index.css
@@ -20,7 +20,8 @@
 	left: 40px;
 }
 
-.layout.collapsed .content .scroll-wrap {
+.layout.collapsed .content .scroll-wrap,
+.layout.collapsed .content .register-flex-columns {
 	width: inherit;
 	min-width: 838px;
 }
